Fixed a bug with the food column being shifted, and added some table styling.

--- a/app/assets/stylesheets/bros.scss
+++ b/app/assets/stylesheets/bros.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the Bros controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+#bro_data {
+  table, td, th {
+    border: 1px solid black;
+  }
+
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  th {
+    text-align: left;
+  }
+}
+
+
